# ComfyUI_SemanticSAM

./: AGENTS.md  README.md  __init__.py  node.py  pyproject.toml  requirements.txt  sam_backend.py  semantic_backend_hf.py  semantic_labeling.py
semantic_sam/: AGENTS.md  __init__.py  build_semantic_sam.py  predictor.py
tasks/: __init__.py
