[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Semantic-SAM"
version = "1.0"
description = "Segment and Recognize Anything at Any Granularity."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "accelerate",
    "huggingface_hub",
    "numpy",
    "opencv-python",
    "Pillow",
    "scipy",
    "timm",
    "torchvision",
    "transformers",
]

[project.urls]
"Paper" = "https://arxiv.org/abs/2307.04767"
"Code" = "https://github.com/UX-Decoder/Semantic-SAM"
"Bug Tracker" = "https://github.com/UX-Decoder/Semantic-SAM/issues"

[tool.setuptools.packages.find]
exclude = ["assets*"]

[tool.wheel]
exclude = ["assets*"]
